# tomjtoth.github.io

./: .gitignore  .npmrc  CNAME  Cargo.toml  Dioxus.toml  README.md  arch.sh  bash_aliases  battery-monitor.js  battery_monitor.js  clonefig.sh  eslint.config.js  gulpfile.js  index.html  index.md  luxor.css  lyrics.css  lyrics.js  lyrics.yaml  main.js  modal.css  nav-bar.css  package-lock.json  package.json  products.md  qr_code.js  recipies.md  shopping-list.css  shopping-list.js  shopping_list.js  styles.css  tsconfig.app.json  tsconfig.json  tsconfig.node.json  visitors.js  vite.config.ts
.github/: dependabot.yml
.github/workflows/: deploy-directly.yml  deploy-rs.yml  deploy.yml
arx-fatalis/: index.html  main.js  manifest.json  styles.css
assets/: index-B29QkwFN.css  index-ByWlHJeS.js  index-C9NaDJz6.js  index-D5Hp8MmW.js  index-D9dmJVA3.js  index-Dkxm0Su0.js  index-M67Hf6AQ.js  luxor.css  shopping-list.css  visitors.yaml
battery-monitor/: func.js  index.html  styles.css
dev/: conf.js  func.js  index.html  main.js  styles.css
dev/src/: app.js  performance.js  utils.js
github.io/: package-lock.json
github.io/src/: App.jsx  main.jsx
laskentaympäristöt/: README.md
linux/: bash_aliases  clonefig.sh  dconf-dump  reminders.sh
lyrics/: README.md
ostokset/: README.md
ostoslista/: README.md  conf.js  cookbook.yaml  func.js  index.html  main.js  styles.css
products/: README.md
public/: cv-template.yaml  lyrics.yaml  manifest.json  quotes.yaml  recipes.yaml  recipies.md  service-worker.js  sw.js
public/arx/: README.md
public/linux/: bash_aliases  clonefig.sh  dconf-dump  reminders.sh
recipies/: README.md
runes/: main.js  styles.css
ruokaohjeet/: README.md
saldo/: index.html
src/: App.jsx  App.tsx  dark-mode.js  db.ts  main.css  main.jsx  main.rs  main.tsx  routes.rs  store.js  store.ts  sw.ts  utils.js  utils.rs  utils.ts
src/assets/: cv.yaml  lyrics.yaml  quotes.yaml  recipes.yaml  visitors.yaml
src/components/: About.jsx  Home.jsx  Home.tsx  MainView.jsx  MainView.tsx  QRCode.jsx  QRCode.tsx  Sidepanel.tsx  ViewContent.tsx  ViewHeader.tsx  ViewRoot.tsx  audio.rs  body.rs  header.rs  home.rs  index.ts  loader.rs  mod.rs  not_found.rs  router.js
src/db/: index.ts  types.ts
src/hooks/: arx-fatalis.tsx  battery-manager.ts  battery-monitor-daemon.ts  battery-monitor.ts  battery_monitor.rs  cv.ts  files.tsx  index.jsx  index.ts  index.tsx  mod.rs  modal.ts  notifications.ts  sidepanel.ts  spinner.ts  useField.jsx  useField.ts  use_battery.rs
src/reducers/: arx-fatalis.ts  battery-monitor.js  battery-monitor.ts  cv.ts  index.ts  luxor.js  luxor.ts  lyrics.js  lyrics.ts  ocp.ts  quotes.ts  runes.js  shopping-list.js  shopping-list.ts  sidepanel.ts  speech-synth.ts  spinner.ts  visitors.ts
src/services/: arx-fatalis.ts  battery-monitor.ts  luxor.ts  luxor.tsx  lyrics.js  lyrics.ts  quotes.ts  shopping-list.js  shopping-list.ts  speech-synth.ts
src/types/: arx-fatalis.ts  battery-monitor.ts  cv.ts  db.ts  hooks.ts  index.ts  luxor.ts  lyrics.ts  modal.ts  (+7 more)
testing/: index.html  main.js  styles.css
what-have-I-done/: index.html  main.js  manifest.json
(+349 files in other folders)
