[package]
name = "apps"
version = "0.1.0"
authors = ["Tamás Tóth <tomjtoth@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.39"
chrono-tz = "0.10.1"
fancy-regex = "0.14.0"
gloo-net = "0.6.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
once_cell = "1.20.2"
qrcode = "0.14.1"
reqwest = "0.12.12"
serde = "1.0.217"
serde_json = "1.0.137"
serde_yaml = "0.9.34"
urlencoding = "2.1.3"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["UrlSearchParams", "HtmlAudioElement", "Window", "Storage", "Navigator", "Clipboard"] }

# this is the development version of Yew
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
