[package]
name = "apps"
version = "0.1.0"
authors = ["Tamás Tóth <tomjtoth@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.39"
chrono-tz = "0.10.1"
dioxus = { version = "0.6.0", features = ["router"] }
fancy-regex = "0.14.0"
gloo-net = "0.6.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
js-sys = "0.3.77"
once_cell = "1.20.2"
qrcode = "0.14.1"
serde = "1.0.217"
serde_json = "1.0.137"
serde_repr = "0.1.19"
serde_yaml = "0.9.34"
strum = "0.26.3"
strum_macros = "0.26.4"
urlencoding = "2.1.3"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["UrlSearchParams", "HtmlAudioElement", "Window", "Storage", "Navigator", "Clipboard", "BatteryManager", "Notification", "NotificationPermission", "NotificationOptions"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.release]
opt-level = "z"    # Optimize for size
lto = true         # Link-time optimization
# panic = "abort"    # Remove panic handling to reduce size
# strip = true       # Remove debug symbols

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
